--- a/docs/wallets/app-wallet/discovery-mode.mdx
+++ b/docs/wallets/app-wallet/discovery-mode.mdx
@@ -12,6 +12,8 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 Discovery Mode are one of the tools available for Hotspot owners to understand their Hotspot coverage and optimize their Hotspot setup.
 
+Read our [announcement blog](https://blog.helium.com/uncover-your-hotspots-potential-discovery-mode-a14003ec23d).
+
 ## How does Discovery Mode work?
 
 Discovery Mode is a marriage between several core components on the Helium network: Helium App, Router, Console, and the Miner. Hotspots, when in Discovery Mode, acts like a device on the Helium network, sending data just like any sensor would. 
