--- a/docs/wallets/app-wallet/discovery-mode.mdx
+++ b/docs/wallets/app-wallet/discovery-mode.mdx
@@ -10,7 +10,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 # Discovery Mode
 
-Discovery Mode are one of the tools available for Hotspot owners to understand their Hotspot coverage and optimize their Hotspot setup.
+Discovery Mode is one of the tools available for Hotspot owners to understand their Hotspot coverage and optimize their Hotspot setup.
 
 Read our [announcement blog](https://blog.helium.com/uncover-your-hotspots-potential-discovery-mode-a14003ec23d).
 
