Refactor Validator docs in preparation of new sections

--- a/docs/mine-hnt/validators/penalties.mdx
+++ b/docs/mine-hnt/validators/penalties.mdx
@@ -1,8 +1,8 @@
 ---
-id: validator-score
+id: validators-penalties
 title: Validator Penalties and Impact on Rewards
 sidebar_label: Penalties
-slug: /mine-hnt/validators/validator-score
+slug: /mine-hnt/validators/penalties
 ---
 
 # Validator Penalties and Impact on Rewards
