--- a/docs/mine-hnt/validators/requirements.mdx
+++ b/docs/mine-hnt/validators/requirements.mdx
@@ -1,11 +1,9 @@
 ---
-id: requirements
-title: Validator Requirements
+id: validators-requirements
+title: Technical Requirements
 sidebar_label: Technical Requirements
 slug: /mine-hnt/validators/requirements
 ---
-
-# Technical Requirements
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
@@ -24,6 +22,4 @@ Based on early tests, validator node requirements include:
 - If using AWS, a t2.large or t2.xlarge EC2 instance or equivalent is recommended. If using another cloud provider, like GCP, Azure, or Digital Ocean, an instance with similar capabilities should be the target.
 - Static IP address with port `2154`(TCP) opened in your firewall with a route available to your validator host.
 - Running on stable network connection free of things like proxies, NAT, etc. The load is largely symmetrical when producing blocks, so good upstream connectivity recommended.
-- It is [discouraged to run Mainnet Validators at home](/mine-hnt/validators/validator-faqs-resources#technical).
-
-Please review the [Expectations for Running a Validator on Testnet](/mine-hnt/validators) for additional expectations.
+- It is [discouraged to run Validators at home](/mine-hnt/validators/faqs-resources#technical).
