--- a/docs/mine-hnt/validators/testnet/deployment-guide.mdx
+++ b/docs/mine-hnt/validators/testnet/deployment-guide.mdx
@@ -1,18 +1,13 @@
 ---
-id: validator-deployment-guide
-title: Validator Deployment Guide
-hide_title: true
-sidebar_label: Validator Deployment Guide
-slug: /mine-hnt/validators/validator-deployment-guide
+id: validators-testnet-deployment-guide
+title: Validator Deployment Guide (Testnet)
+sidebar_label: Deployment Guide
+slug: /mine-hnt/validators/testnet/deployment-guide
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-<img className="docsheader" src={useBaseUrl("img/mine-hnt/validators.png")} />
-
-# Validator Deployment Guide
-
-This guide will cover the end-to-end process of deploying a Helium Validator. It assumes you're starting from scratch. At the end, you'll have a Helium Validator deployed on the Network.
+This guide will cover the end-to-end process of deploying a Helium Validator on Testnet. It assumes you're starting from scratch. At the end, you'll have a Helium Validator deployed on the Network.
 
 :::info
 
