--- a/docs/mine-hnt/validators/testnet/test-cases.mdx
+++ b/docs/mine-hnt/validators/testnet/test-cases.mdx
@@ -1,11 +1,9 @@
 ---
-id: validator-testcases
+id: validators-testnet-test-cases
 title: Test Cases
 sidebar_label: Test Cases
-slug: /mine-hnt/validators/validator-testcases
+slug: /mine-hnt/validators/testnet/test-cases
 ---
-
-# Test Cases
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
