--- a/docs/mine-hnt/validators/testnet/wallet.mdx
+++ b/docs/mine-hnt/validators/testnet/wallet.mdx
@@ -1,11 +1,9 @@
 ---
-id: validator-wallet
-title: Configure a Wallet
+id: validators-testnet-wallet
+title: Configure a Wallet (Testnet)
 sidebar_label: Configure a Wallet
-slug: /mine-hnt/validators/validator-wallet
+slug: /mine-hnt/validators/testnet/wallet
 ---
-
-# Configure a Wallet
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
@@ -42,7 +40,7 @@ HELIUM_WALLET_PASSWORD=p4ssw0rd ./helium-wallet create basic --network testnet
 
 `./helium-wallet info` view public key and TNT balance. You’ll need this public key address to obtain TNT needed for staking.
 
-To obtain TNT tokens visit [Obtain Testnet Network Tokens (TNT)](/mine-hnt/validators/validator-tnt).
+To obtain TNT tokens visit [faucet.helium.wtf](https://faucet.helium.wtf/).
 
 :::warning
 
@@ -165,4 +163,4 @@ Once a validator has had a stake transferred from it, it cannot be staked again.
 
 :::
 
-More general wallet commands [here](https://github.com/helium/helium-wallet-rs).
+More general wallet commands [here](/wallets/cli-wallet).
