--- a/docs/mine-hnt/validators/troubleshooting.mdx
+++ b/docs/mine-hnt/validators/troubleshooting.mdx
@@ -1,15 +1,15 @@
 ---
-id: validator-troubleshooting
+id: validators-troubleshooting
 title: Troubleshooting
 sidebar_label: Troubleshooting
-slug: /mine-hnt/validators/validator-troubleshooting
+slug: /mine-hnt/validators/troubleshooting
 ---
 
 # Troubleshooting
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-There is a ```#validator``` [Discord](https://discord.gg/helium)  channel available to reach other testnet participants. Also use this channel to share feedback and report issues.
+There is a ```#validator``` [Discord](https://discord.gg/helium)  channel available to reach other validator participants. Also use this channel to share feedback and report issues.
 
 ## View logs
 Tailing the `console.log` is always helpful to get an idea of what's going on. Assuming your data is mounted at `~/validator_data`, run:
