--- a/docs/mine-hnt/validators/monitoring.mdx
+++ b/docs/mine-hnt/validators/monitoring.mdx
@@ -1,14 +1,11 @@
 ---
-id: validator-monitor
-title: Monitor a Validator
-hide_title: true
-sidebar_label: Monitor a Validator
-slug: /mine-hnt/validators/validator-monitor
+id: validators-monitoring
+title: Monitoring a Validator
+sidebar_label: Monitoring
+slug: /mine-hnt/validators/monitoring
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
-
-# Monitor a Validator
 
 The Docker commands will assume you have the same prefix to get you executing a command within the docker: ```docker exec validator``` . If you want to make it easier, you can always create an alias such as: ```alias miner="docker exec validator miner"```.
 
