Updates mappers endpoint

--- a/docs/use-the-network/coverage-mapping/mappers-api.mdx
+++ b/docs/use-the-network/coverage-mapping/mappers-api.mdx
@@ -27,7 +27,7 @@ There is currently no authentication required.
 ### Ingest Uplink
 
 ```
-POST https://mappers.helium.wtf/api/v1/ingest
+POST https://mappers.helium.com/api/v1/ingest/uplink
 ```
 
 Submit geo tagged device uplink.
