--- a/docs/api/blockchain/accounts.mdx
+++ b/docs/api/blockchain/accounts.mdx
@@ -304,10 +304,6 @@ GET https://api.helium.io/v1/accounts/:address/validators
 Fetches validators owned by a given account address. The list of returned
 validators is paged. If a `cursor` field is present more results are available.
 
-Note: The cursor for accounts is valid for a limited time. If you receive a
-`400` http response code for a cursor based request, you will need to start
-fetching accounts from the beginning of the list.
-
 <Tabs
   block={true}
   defaultValue="request"
@@ -316,15 +312,15 @@ fetching accounts from the beginning of the list.
 
 _Path Parameters_
 
-| param              | Type     | Note                                     |
-| ------------------ | -------- | ---------------------------------------- |
-| address (required) | _string_ | Account B58 address to fetch details for |
+| param              | Type     | Note                                        |
+| ------------------ | -------- | ------------------------------------------- |
+| address (required) | _string_ | Account B58 address to fetch validators for |
 
 _Query Parameters_
 
-| param             | Type     | Note                                          |
-| ----------------- | -------- | --------------------------------------------- |
-| cursor (optional) | _string_ | Cursor for the next page of hotspots to fetch |
+| param             | Type     | Note                                            |
+| ----------------- | -------- | ----------------------------------------------- |
+| cursor (optional) | _string_ | Cursor for the next page of validators to fetch |
 
 </TabItem>
 <TabItem value="response">
