adding mainnet deployment guide

--- a/docs/api/blockchain/validators.mdx
+++ b/docs/api/blockchain/validators.mdx
@@ -13,9 +13,8 @@ import TabItem from "@theme/TabItem";
 
 :::warning
 
-These docs reflect the Validator Mainnet API. However, it is **not yet live**.
-We are currently on Testnet. During the Testnet period, please use the following
-as the base url for the Testnet API:
+These docs reflect the Validator Mainnet API. If you would like to use the Testnet API, 
+please use the following base url:
 
 ```
 https://testnet-api.helium.wtf/v1/
