--- a/docs/mine-hnt/validators/validators.mdx
+++ b/docs/mine-hnt/validators/validators.mdx
@@ -7,21 +7,26 @@ slug: /mine-hnt/validators
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-<img className="docsheader" src={useBaseUrl("img/mine-hnt/validators.png")} />
-
-:::tip
-
-We are currently running in the Testnet. Please see below for details on how to help the community by participating.
-
-:::
-
-Validators are a new entity on the Helium Blockchain that will perform the work of the consensus group including verifying transactions and adding new blocks to the blockchain.
-
 <img
   className="docsheader"
   style={{ marginBottom: 20 }}
   src={useBaseUrl("img/validators/schematic.png")}
 />
+
+
+
+:::tip
+
+As of June 23rd, 2021, HNT staking has been enabled for Validators on Mainnet!
+
+:::
+
+Validators are a new entity on the Helium Blockchain that perform the work of the consensus group including verifying transactions and adding new blocks to the blockchain.
+
+## Mainnet
+
+* [Mainnet Deployment Guide](/mine-hnt/validators/mainnet/deployment-guide) - How to get up and running with your a Validator on Mainnet. This guide covers staking, running, updating, and monitoring.
+* [Validator Mainnet Explorer](https://explorer-beta.helium.com/validators) - The easiest way to monitor the Validator magic on Mainnet. 
 
 ## Testnet
 
@@ -30,7 +35,7 @@ Validators are a new entity on the Helium Blockchain that will perform the work 
 * [Deployment Guide](/mine-hnt/validators/testnet/deployment-guide) - How to get up and running with your Testnet validator.  Including staking, running, updating, and monitoring.
 * [Wallet Commands](/mine-hnt/validators/testnet/wallet) - Additional wallet commands for use with validators.
 * [Test Cases](/mine-hnt/validators/testnet/test-cases) - Test cases and areas of focus for the Testnet.
-* [Explorer](https://explorer.helium.wtf/validators) - There is a new Explorer being developed by Helium and the community.
+* [Testnet Explorer](https://explorer.helium.wtf/validators) - There is a new Explorer being developed by Helium and the community.
 
 ## General Resources
 
