tweaks and fixed links
tweaks and fixed links

--- a/docs/mine-hnt/validators/validators.mdx
+++ b/docs/mine-hnt/validators/validators.mdx
@@ -25,12 +25,12 @@ Validators are a new entity on the Helium Blockchain that will perform the work 
 
 ## Testnet
 
-* [Expectations](/mine-hnt/validators/testnet/expectations) - Read this guide first. These are the expectations of Testnet validators.
+* [Expectations](/mine-hnt/validators/testnet/expectations) - Read this guide first. These are the expectations of Testnet Validators.
 * [Design](/mine-hnt/validators/testnet/design) - Differences between the Testnet and the Mainnet.
-* [Deployment Guide](/mine-hnt/validators/testnet/deployment-guide) - How to get up and running with your Testnet validator.  Including staking, running, updating, and monitoring.
-* [Wallet Commands](/mine-hnt/validators/testnet/wallet) - Additional wallet commands for use with validators.
+* [Deployment Guide](/mine-hnt/validators/testnet/deployment-guide) - How to get up and running with your Testnet Validator.  Including staking, running, updating, and monitoring.
+* [Wallet Commands](/mine-hnt/validators/testnet/wallet) - Additional wallet commands for use with Validators.
 * [Test Cases](/mine-hnt/validators/testnet/test-cases) - Test cases and areas of focus for the Testnet.
-* [Explorer](https://explorer.helium.wtf/validators) - There is a new Explorer being developed by Helium and the community.
+* [Explorer](https://explorer-beta.helium.com/validators) - There is a new Explorer being developed by Helium and the community.
 
 ## General Resources
 
