--- a/docs/mine-hnt/validators/requirements.mdx
+++ b/docs/mine-hnt/validators/requirements.mdx
@@ -7,19 +7,19 @@ slug: /mine-hnt/validators/requirements
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-Based on early tests, validator node requirements include:
+Validator node requirements include:
 
 - Operating system: 
-  - Planning on running from docker: Any linux based system capable of running docker
-  - Planning on running from source: Ubuntu 20.04 LTS
+  - Running from docker: Any Linux-based system capable of running docker
+  - Running from source: Ubuntu 20.04 LTS
 - CPU: 
-  - Intel, AMD or ARM based processor 3.0 GHz or above with 2 cores or equivalent
-  - In testnet, scores of [GeekBench 5](https://www.geekbench.com/) Multi-Core of greater than 2,200 have performed well
+  - Intel, AMD or ARM-based processor 3.0 GHz or above with 2 cores or equivalent
+  - In Testnet, scores of [GeekBench 5](https://www.geekbench.com/) multi-core of greater than 2,200 have performed well
   - For Intel and AMD systems, [AVX2 or AVX support](https://en.wikipedia.org/wiki/Advanced_Vector_Extensions) is required. Verify your CPU supports these extensions by checking `grep avx /proc/cpuinfo` and verifying that AVX support is included in the output.
-  - These recommendations may change for mainnet as the size of consensus groups grow and hotspot transactions are added
+  - These recommendations may change for Mainnet as the size of consensus groups grow and Hotspot transactions are added
 - Memory: 8 GB or above
-- Storage: 256 GB or more for mainnet.  64GB is sufficient for testnet.
-- If using AWS, a t2.large or t2.xlarge EC2 instance or equivalent is recommended. If using another cloud provider, like GCP, Azure, or Digital Ocean, an instance with similar capabilities should be the target.
-- Static IP address with port `2154`(TCP) opened in your firewall with a route available to your validator host.
+- Storage: 256 GB or more for Mainnet.  64 GB is sufficient for Testnet.
+- If using AWS, a t2.large or t2.xlarge EC2 instance or equivalent is recommended. If using another cloud provider, like GCP, Azure, or Digital Ocean, choose an instance with similar capabilities.
+- Static IP address with port `2154`(TCP) opened in your firewall with a route available to your Validator host.
 - Running on stable network connection free of things like proxies, NAT, etc. The load is largely symmetrical when producing blocks, so good upstream connectivity recommended.
-- It is [discouraged to run Validators at home](/mine-hnt/validators/faqs-resources#technical).
+- It is [discouraged to run Validators at home](/mine-hnt/validators/faqs-resources-providers#technical).
