--- a/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
+++ b/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
@@ -12,7 +12,7 @@ This guide will cover the end-to-end process of deploying a Helium Validator on 
 
 :::warning
 
-Although staking HNT has officially been enabled on Mainnet, Validators are not yet managing the Consensus Group - and therefore are not yet earning HNT. This will be enabled approximately 10-14 days after Mainnet reaches 100 staked Validators.
+Although initial staking has officially been enabled on Mainnet, Validators are not yet elected into the Consensus Group - and therefore are not yet earning HNT. This will be enabled at a later date, after the core developers believe it's safe to activate the chain variables. The current expectation is that this will be possible about 10-14 days after Mainnet reaches 100 staked Validators.
 
 :::
 
