--- a/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
+++ b/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
@@ -137,7 +137,7 @@ Now that docker is installed and ready, let's run the Validator.
 
 #### Run the Docker Container
 
-Before running the container for the first time, it is mandatory to pick a "system mount point". This allows you to easily maintain your Validator's blockchain identity - specifically it `swarm keys` - and blockchain state through image updates. Without doing this, you will lose these items when upgrading docker images.
+Before running the container for the first time, it is mandatory to pick a "system mount point". This allows you to easily maintain your Validator's blockchain identity - specifically `swarm keys` - and blockchain state through image updates. Without doing this, you will lose these items when upgrading docker images.
 
 The `validator` directory should be created on a persistent EBS volume (if you're using AWS) or something similar that lives across server lifetimes.
 
