--- a/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
+++ b/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
@@ -180,7 +180,7 @@ To ensure that each Validator gets updated quickly without your manual involveme
 
 :::info
 
-Watchtower simply reviews the `docker run` commands that were used to launch the running containers and checks for newer images for these containers.  Therefore it is imperative that your `docker run` command reference the `latest-val-amd64` or `latest-val-arm64` image tag or **it will never update**.
+Watchtower simply reviews the `docker run` commands that were used to launch the running containers and checks for newer images for these containers.  Therefore it is imperative that your `docker run` command reference the `latest-validator-amd64` or `latest-validator-arm64` image tag or **it will never update**.
 
 :::
 
