--- a/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
+++ b/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
@@ -224,7 +224,7 @@ To upgrade your docker container to the latest version, do the following. These 
 ```
 docker stop validator && docker rm validator
 
-docker pull quay.io/team-helium/validator:latest-val-amd64
+docker pull quay.io/team-helium/validator:latest-validator-amd64
 
 docker image prune -f
 ```
