--- a/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
+++ b/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
@@ -334,7 +334,7 @@ _build/validator/rel/miner/bin/miner start
 One last step. When building from source, you'll need to manually load the Helium blockchain genesis block once your miner is deployed and running. To do this, run the following:
 
 ```
-wget https://snapshots.helium.wtf/genesis.testnet
+wget https://github.com/helium/blockchain-api/raw/master/priv/prod/genesis
 miner genesis load </absolute/path/to/genesis/block>
 ```
 
