--- a/docs/mine-hnt/validators/validators.mdx
+++ b/docs/mine-hnt/validators/validators.mdx
@@ -17,7 +17,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 :::tip
 
-As of June 23rd, 2021, HNT staking has been enabled for Validators on Mainnet!
+HNT staking has been enabled for Validators on Mainnet!
 
 :::
 
