--- a/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
+++ b/docs/mine-hnt/validators/mainnet/deployment-guide.mdx
@@ -88,7 +88,7 @@ The output will look similar to this:
 
 ## Each Validator Requires 10000 HNT
 
-Running a Validator on Mainnet requires a stake of `10000 HNT` per Validator. After you've created your wallet, transfer `10000 HNT` into it for each Validator you intend to run. (You should actually transfer slightly more than `10000 HNT` for each Validator to cover the transaction costs required for the staking and unstaking operations. An additional `2` HNT per Validator will be more than enough to cover this.) 
+Running a Validator on Mainnet requires a stake of `10000 HNT` per Validator. After you've created your wallet, transfer a little more than `10000 HNT` into it for each Validator you intend to run. (The extra will cover the transaction costs required for the staking and unstaking operations. An additional `2` HNT per Validator will be more than enough to cover this.) 
 
 ## Run a Validator
 
