adding details on testnet to mainnet migration path

--- a/docs/mine-hnt/validators/validators.mdx
+++ b/docs/mine-hnt/validators/validators.mdx
@@ -28,6 +28,16 @@ Validators are a new entity on the Helium Blockchain that perform the work of th
 * [Mainnet Deployment Guide](/mine-hnt/validators/mainnet/deployment-guide) - How to get up and running with your a Validator on Mainnet. This guide covers staking, running, updating, and monitoring.
 * [Validator Mainnet Explorer](https://explorer-beta.helium.com/validators) - The easiest way to monitor the Validator magic on Mainnet. 
 
+:::warning
+
+**Testnet to Mainnet Migration**
+
+There is no direct migration path to move Testnet Validators to Mainnet. [Details on how to migrate are here.](/mine-hnt/validators/testnet-to-mainnet-migration)
+
+:::
+
+
+
 ## Testnet
 
 * [Expectations](/mine-hnt/validators/testnet/expectations) - Read this guide first. These are the expectations of Testnet validators.
@@ -40,6 +50,7 @@ Validators are a new entity on the Helium Blockchain that perform the work of th
 ## General Resources
 
 * [Technical Requirements](/mine-hnt/validators/requirements) - Information on the hardware, software, and network recommendations on hosting a validator.
+* [Testnet to Mainnet Migration](/mine-hnt/validators/testnet-to-mainnet-migration)
 * [Monitoring](/mine-hnt/validators/monitoring) - Monitoring a Validator
 * [Troubleshooting](/mine-hnt/validators/troubleshooting) - Troubleshooting help and additional resources.
 * [Penalties](/mine-hnt/validators/penalties) - Overview of validator penalties.
