adding mainnet deployment guide and other tweaks (#430)
* adding mainnet deployment guide

* Update docs/mine-hnt/validators/mainnet/deployment-guide.mdx

Much better. Thanks.

Co-authored-by: Abhay Kumar <abhay@helium.com>

* Update docs/mine-hnt/validators/mainnet/deployment-guide.mdx

Co-authored-by: Dal <36315460+jdgemm@users.noreply.github.com>

* Update docs/mine-hnt/validators/mainnet/deployment-guide.mdx

Thanks.

Co-authored-by: Dal <36315460+jdgemm@users.noreply.github.com>

* Update docs/mine-hnt/validators/mainnet/deployment-guide.mdx

Co-authored-by: Dal <36315460+jdgemm@users.noreply.github.com>

* Update docs/mine-hnt/validators/mainnet/deployment-guide.mdx

Co-authored-by: Dal <36315460+jdgemm@users.noreply.github.com>

* Update docs/mine-hnt/validators/mainnet/deployment-guide.mdx

Co-authored-by: Dal <36315460+jdgemm@users.noreply.github.com>

* Update docs/mine-hnt/validators/validators.mdx

Co-authored-by: Dal <36315460+jdgemm@users.noreply.github.com>

* Update docs/mine-hnt/validators/mainnet/deployment-guide.mdx

Co-authored-by: Dal <36315460+jdgemm@users.noreply.github.com>

* Update docs/mine-hnt/validators/mainnet/deployment-guide.mdx

Co-authored-by: Abhay Kumar <abhay@helium.com>

* Update docs/mine-hnt/validators/mainnet/deployment-guide.mdx

Thanks. I'm also going to add a note that points to the penalties page.

Co-authored-by: Dal <36315460+jdgemm@users.noreply.github.com>

* Update docs/mine-hnt/validators/mainnet/deployment-guide.mdx

Co-authored-by: Dal <36315460+jdgemm@users.noreply.github.com>

* Update docs/mine-hnt/validators/mainnet/deployment-guide.mdx

Co-authored-by: Dal <36315460+jdgemm@users.noreply.github.com>

* Update docs/mine-hnt/validators/mainnet/deployment-guide.mdx

Co-authored-by: Dal <36315460+jdgemm@users.noreply.github.com>

* add notes about transaction fees and penalties

* adding details on testnet to mainnet migration path

Co-authored-by: ma

--- a/docs/mine-hnt/validators/validators.mdx
+++ b/docs/mine-hnt/validators/validators.mdx
@@ -7,21 +7,36 @@ slug: /mine-hnt/validators
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-<img className="docsheader" src={useBaseUrl("img/mine-hnt/validators.png")} />
-
-:::tip
-
-We are currently running in the Testnet. Please see below for details on how to help the community by participating.
-
-:::
-
-Validators are a new entity on the Helium Blockchain that will perform the work of the consensus group including verifying transactions and adding new blocks to the blockchain.
-
 <img
   className="docsheader"
   style={{ marginBottom: 20 }}
   src={useBaseUrl("img/validators/schematic.png")}
 />
+
+
+
+:::tip
+
+HNT staking has been enabled for Validators on Mainnet!
+
+:::
+
+Validators are a new entity on the Helium Blockchain that perform the work of the consensus group including verifying transactions and adding new blocks to the blockchain.
+
+## Mainnet
+
+* [Mainnet Deployment Guide](/mine-hnt/validators/mainnet/deployment-guide) - How to get up and running with your a Validator on Mainnet. This guide covers staking, running, updating, and monitoring.
+* [Validator Mainnet Explorer](https://explorer-beta.helium.com/validators) - The easiest way to monitor the Validator magic on Mainnet. 
+
+:::warning
+
+**Testnet to Mainnet Migration**
+
+There is no direct migration path to move Testnet Validators to Mainnet. [Details on how to migrate are here.](/mine-hnt/validators/testnet-to-mainnet-migration)
+
+:::
+
+
 
 ## Testnet
 
@@ -30,11 +45,12 @@ Validators are a new entity on the Helium Blockchain that will perform the work 
 * [Deployment Guide](/mine-hnt/validators/testnet/deployment-guide) - How to get up and running with your Testnet validator.  Including staking, running, updating, and monitoring.
 * [Wallet Commands](/mine-hnt/validators/testnet/wallet) - Additional wallet commands for use with validators.
 * [Test Cases](/mine-hnt/validators/testnet/test-cases) - Test cases and areas of focus for the Testnet.
-* [Explorer](https://explorer.helium.wtf/validators) - There is a new Explorer being developed by Helium and the community.
+* [Testnet Explorer](https://explorer.helium.wtf/validators) - There is a new Explorer being developed by Helium and the community.
 
 ## General Resources
 
 * [Technical Requirements](/mine-hnt/validators/requirements) - Information on the hardware, software, and network recommendations on hosting a validator.
+* [Testnet to Mainnet Migration](/mine-hnt/validators/testnet-to-mainnet-migration)
 * [Monitoring](/mine-hnt/validators/monitoring) - Monitoring a Validator
 * [Troubleshooting](/mine-hnt/validators/troubleshooting) - Troubleshooting help and additional resources.
 * [Penalties](/mine-hnt/validators/penalties) - Overview of validator penalties.
