add Vanager to faqs-resources-providers.mdx

--- a/docs/mine-hnt/validators/faqs-resources-providers.mdx
+++ b/docs/mine-hnt/validators/faqs-resources-providers.mdx
@@ -111,3 +111,4 @@ Links to these Staking Providers are provided as is. Helium, Inc. is not directl
 * [Validators Pool](https://helium.bx-host.com)
 * [HNT Staking](https://www.hntstaking.net)
 * [Bison Trails](https://www.bisontrails.co)
+* [Vanager](https://vanager.io)
